--- a/api-rabbit-producer/package.json
+++ b/api-rabbit-producer/package.json
@@ -11,9 +11,6 @@
     "express": "^4.17.1"
   },
   "scripts": {
-    "dev": "ts-node ./src/server.ts"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13"
+    "dev": "node ./src/index.js"
   }
 }
